manifests/privvy-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privvy-pod
  namespace: default
  labels:
    app: privvy-pod
spec:
  containers:
  - name: privvy-container
    image: ghcr.io/drewpypro/kube-aws-istio:latest
    command:
      - /bin/sh
      - -c
      - "sleep infinity"
    securityContext:
      privileged: true
    volumeMounts:
    - mountPath: /host
      name: host-volume
    resources:
      requests:
        cpu: 100m
        memory: 128Mi
      limits:
        cpu: 200m
        memory: 256Mi
  nodeSelector:
    role: worker
  tolerations:
  - key: "dedicated"
    operator: "Equal"
    value: "worker"
    effect: "NoSchedule"
  volumes:
  - name: host-volume
    hostPath:
      path: /
      type: Directory
