manifests/istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "cormorant-test.drewpy.pro"
    - "anhinga-test.drewpy.pro"
    - "gannet-test.drewpy.pro"
    - "argocd-test.drewpy.pro"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "cormorant-test.drewpy.pro"
    - "anhinga-test.drewpy.pro"
    - "gannet-test.drewpy.pro"
    - "argocd-test.drewpy.pro"
    tls:
      mode: SIMPLE
      credentialName: ingress-gateway-cert
