manifests/argocd-install.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-virtual-service
  namespace: argocd
spec:
  hosts:
    - argocd.drewpy.pro
  gateways:
    - istio-ingress/ingress-gateway
  http:
    - route:
        - destination:
            host: argocd-server.argocd
            port:
              number: 80
